BB-6671: FrontStore > Quick Order > Broken styles all buttons - fix buttons

--- a/src/Oro/Bundle/ProductBundle/Resources/public/default/scss/components/quick-order.scss
+++ b/src/Oro/Bundle/ProductBundle/Resources/public/default/scss/components/quick-order.scss
@@ -262,9 +262,6 @@
 
   .widget-content {
     .action-button {
-      background-color: get-color('additional', 'dark');
-      border-color: get-color('additional', 'dark');
-
       &.btn-inactive {
         background-color: get-color('additional', 'middle');
       }
